--- a/app/src/main/res/layout/fragment_password_recovery.xml
+++ b/app/src/main/res/layout/fragment_password_recovery.xml
@@ -44,7 +44,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/lEmail"
-                style="@style/TextInputLayout"
+                style="@style/TextInputLayoutOutlined"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tvHeader"
@@ -66,11 +66,9 @@
                 android:id="@+id/bSendEmail"
                 style="@style/MaterialButton"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:text="@string/send_email"
                 android:layout_below="@id/lEmail"
-                app:cornerRadius="16dp"
                 app:onClick='@{viewModel::recover}'/>
 
         </RelativeLayout>
