--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -27,7 +27,7 @@
             tools:layout="@layout/fragment_sign_in" />
 
         <include
-            layout="@layout/custom_toolbar"
+            layout="@layout/toolbar_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
