--- a/app/src/main/res/layout/fragment_message_dialog.xml
+++ b/app/src/main/res/layout/fragment_message_dialog.xml
@@ -79,7 +79,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/bAction1"
                 style="@style/DefaultButtonStyle"
                 android:layout_width="match_parent"
@@ -89,7 +89,7 @@
                 android:text="@string/ok"
                 app:onClick='@{viewModel::bAction1OnClick}' />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/bAction2"
                 style="@style/DefaultButtonStyle"
                 android:layout_width="match_parent"
