--- a/app/src/main/res/layout/item_network_state.xml
+++ b/app/src/main/res/layout/item_network_state.xml
@@ -35,11 +35,10 @@
             android:layout_gravity="center"
             app:visibleOrGone='@{viewModel.networkState.status == Status.RUNNING}' />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/retry_button"
-            style="@style/DefaultButtonStyle"
+            style="@style/MaterialButton"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/retryWithThreeDots"
             android:onClick='@{(v) -> viewModel.retryCallback.invoke()}'
