--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,14 +43,21 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="Backdrop" parent="">
+        <item name="android:background">@color/colorPrimary</item>
+    </style>
 
     <style name="MainActionBar" parent="Widget.AppCompat.Light.ActionBar">
         <item name="background">@android:color/transparent</item>
         <item name="titleTextColor">@color/colorBackgroundPrimary</item>
     </style>
 
+    <style name="TextInputLayoutOutlined" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="hintTextAppearance">@style/HintText</item>
+        <item name="android:paddingBottom">8dp</item>
+    </style>
 
-    <style name="TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+    <style name="TextInputLayoutFilled" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
         <item name="hintTextAppearance">@style/HintText</item>
         <item name="android:paddingBottom">8dp</item>
     </style>
@@ -116,6 +123,19 @@
     <style name="MaterialButton" parent="Widget.MaterialComponents.Button">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textAllCaps">false</item>
+        <item name="cornerRadius">16dp</item>
     </style>
 
+    <style name="MaterialTextButton" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/colorText</item>
+    </style>
+
+    <style name="MaterialFacebookButton" parent="MaterialButton">
+        <item name="backgroundTint">@color/facebookButton</item>
+    </style>
+
+    <style name="MaterialTwitterButton" parent="MaterialButton">
+        <item name="backgroundTint">@color/twitterButton</item>
+    </style>
 </resources>
