--- a/app/src/main/res/xml/scene_gps_slide.xml
+++ b/app/src/main/res/xml/scene_gps_slide.xml
@@ -19,9 +19,10 @@
 
         <Constraint
             android:id="@id/slider"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/min_text_margin"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="@id/fGPSRoot" />
@@ -39,9 +40,8 @@
 
         <Constraint
             android:id="@id/slider"
-            android:layout_width="50dp"
+            android:layout_width="86dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/min_text_margin"
             motion:layout_constraintBottom_toTopOf="@id/bStartStopLocationListener"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent" />
