updated scenes time

--- a/app/src/main/res/xml/scene_gps_slide.xml
+++ b/app/src/main/res/xml/scene_gps_slide.xml
@@ -9,6 +9,10 @@
         motion:duration="500"
         motion:motionInterpolator="easeInOut">
 
+        <OnSwipe
+            motion:dragDirection="dragDown"
+            motion:touchRegionId="@id/slider"/>
+
         <OnClick
             motion:clickAction="toggle"
             motion:targetId="@id/slider" />
