--- a/app/src/main/res/layout/item_nav_header_main.xml
+++ b/app/src/main/res/layout/item_nav_header_main.xml
@@ -15,7 +15,7 @@
 
     </data>
 
-    <LinearLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/navHeaderRoot"
         android:layout_width="match_parent"
         android:layout_height="@dimen/nav_header_height"
@@ -50,5 +50,5 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             tools:text="Name Surname" />
 
-    </LinearLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
