--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -17,7 +17,7 @@
         android:background='@{notificationItemViewModel.notification.dateOfRead == null ? @color/colorNotActive : @color/colorBackgroundPrimary}'
         tools:ignore="ContentDescription">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivItemImage"
             android:layout_width="50dp"
             android:layout_height="50dp"
