--- a/app/src/main/res/layout/fragment_gitreposearch.xml
+++ b/app/src/main/res/layout/fragment_gitreposearch.xml
@@ -67,6 +67,7 @@
                 android:layout_height="match_parent"
                 android:adapter='@{viewModel.adapter}'
                 android:scrollbars="vertical"
+                android:clipChildren="false"
                 app:items='@{viewModel.repos}'
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:networkState='@{viewModel.networkState}'
