--- a/app/src/main/res/layout/item_gitreposearch.xml
+++ b/app/src/main/res/layout/item_gitreposearch.xml
@@ -15,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/min_text_margin"
-        android:layout_marginBottom="@dimen/min_text_margin">
+        android:layout_marginBottom="@dimen/min_text_margin"
+        android:clipToPadding="false">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivUserAvatar"
