--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -9,10 +9,14 @@
         android:id="@+id/gitRepoSearchFragment"
         android:name="com.example.testjetpack.ui.main.gitreposearch.GitRepoSearchFragment"
         android:label="Git Repo Search"
-        tools:layout="@layout/fragment_gitreposearch" >
+        tools:layout="@layout/fragment_gitreposearch">
         <action
             android:id="@+id/action_gitRepoSearchFragment_to_gitRepoDetailsFragment"
-            app:destination="@id/gitRepoDetailsFragment" />
+            app:destination="@id/gitRepoDetailsFragment"
+            app:enterAnim="@anim/fade_in"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
+            app:popExitAnim="@anim/fade_out" />
     </fragment>
     <fragment
         android:id="@+id/myProfileFragment"
@@ -43,20 +47,20 @@
         android:id="@+id/gitRepoDetailsFragment"
         android:name="com.example.testjetpack.ui.main.gitrepodetails.GitRepoDetailsFragment"
         android:label="Git Repo Details"
-        tools:layout="@layout/fragment_gitrepodetails" >
+        tools:layout="@layout/fragment_gitrepodetails">
         <argument
             android:name="gitRepositoryView"
-            app:nullable="false"
-            app:argType="com.example.testjetpack.models.git.db.GitRepositoryView" />
+            app:argType="com.example.testjetpack.models.git.db.GitRepositoryView"
+            app:nullable="false" />
         <argument
             android:name="transitionName"
             android:defaultValue="null"
-            app:nullable="true"
-            app:argType="string" />
+            app:argType="string"
+            app:nullable="true" />
         <argument
             android:name="transitionBitmap"
-            app:nullable="true"
-            app:argType="android.graphics.Bitmap" />
+            app:argType="android.graphics.Bitmap"
+            app:nullable="true" />
     </fragment>
 
     <action
