removed bitmap from fragment arguments added LruCache to di updated GitRepoDetailsFragment with Repository Data

--- a/app/src/main/res/layout/fragment_gitrepodetails.xml
+++ b/app/src/main/res/layout/fragment_gitrepodetails.xml
@@ -6,8 +6,6 @@
 
     <data>
 
-        <import type="com.example.testjetpack.utils.ObjectExtKt" />
-
         <variable
             name="viewModel"
             type="com.example.testjetpack.ui.main.gitrepodetails.GitRepoDetailsFragmentVM" />
@@ -39,7 +37,7 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:map='@{ObjectExtKt.toMapOfStrings(viewModel.gitRepository)}'
+            app:map='@{viewModel.repoDetails}'
             tools:listitem="@android:layout/simple_expandable_list_item_2" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
