--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -12,26 +12,83 @@
 
     </data>
 
-    <LinearLayout
-        android:id="@+id/fNotificationsRoot"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/bsView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <RelativeLayout
-            android:id="@+id/toolbarPlaceHolder"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list"
-            android:name="com.example.testjetpack.ui.main.notifications.NotificationFragment"
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:adapter='@{viewModel.adapter}'
-            app:items='@{viewModel.adapterItems}'
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/item_notification" />
-    </LinearLayout>
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:id="@+id/toolbarPlaceHolder"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/colorPrimary" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list"
+                android:name="com.example.testjetpack.ui.main.notifications.NotificationFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adapter='@{viewModel.adapter}'
+                app:items='@{viewModel.adapterItems}'
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/item_notification" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:paddingTop="25dp"
+            android:paddingStart="25dp"
+            app:behavior_hideable="false"
+            app:behavior_peekHeight="35dp"
+            app:behavior_skipCollapsed="false"
+            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+            tools:ignore="RtlSymmetry">
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_with_left_rounded_corner"
+                android:backgroundTint="@color/colorPrimary"
+                android:orientation="horizontal"
+                android:paddingTop="10dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp">
+
+                <androidx.appcompat.widget.AppCompatImageButton
+                    android:id="@+id/bAdd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/button_shape"
+                    android:backgroundTint="@color/colorSeparator"
+                    android:padding="5dp"
+                    android:src="@android:drawable/ic_menu_add"
+                    app:layout_constraintEnd_toStartOf="@id/bClear"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:onClick='@{viewModel::addNotifications}' />
+
+                <androidx.appcompat.widget.AppCompatImageButton
+                    android:id="@+id/bClear"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/button_shape"
+                    android:backgroundTint="@color/colorSeparator"
+                    android:padding="5dp"
+                    android:src="@android:drawable/ic_menu_delete"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:onClick='@{viewModel::clearNotifications}' />
+            </androidx.appcompat.widget.LinearLayoutCompat>
+        </FrameLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
