--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -13,7 +13,6 @@
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/bsView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -40,55 +39,75 @@
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <androidx.constraintlayout.motion.widget.MotionLayout
+            android:id="@+id/bsView"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
             android:layout_gravity="end"
-            android:paddingTop="25dp"
-            android:paddingStart="25dp"
+            android:background="@drawable/shape_with_top_rounded_corners"
+            android:backgroundTint="@color/colorPrimary"
+            android:clickable="true"
+            android:focusable="true"
+            android:orientation="horizontal"
             app:behavior_hideable="false"
-            app:behavior_peekHeight="35dp"
+            app:behavior_peekHeight="?actionBarSize"
             app:behavior_skipCollapsed="false"
+            app:layoutDescription="@xml/scene_notifications_bottomsheet_slide"
             app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
             tools:ignore="RtlSymmetry">
 
-            <androidx.appcompat.widget.LinearLayoutCompat
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvBsHeader"
+                style="@style/HeaderText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:text="@string/notifications_bottomsheed_menu"
+                android:textColor="@color/colorWhiteText" />
+
+            <View
+                android:id="@+id/separator"
+                style="@style/SeparatorStyle"
+                android:layout_width="match_parent" />
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/bAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/shape_with_left_rounded_corner"
-                android:backgroundTint="@color/colorPrimary"
-                android:orientation="horizontal"
-                android:paddingTop="10dp"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp">
+                android:background="@drawable/button_shape"
+                android:backgroundTint="@color/colorSeparator"
+                android:padding="5dp"
+                android:src="@android:drawable/ic_menu_add"
+                app:onClick='@{viewModel::addNotifications}' />
 
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/bAdd"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:background="@drawable/button_shape"
-                    android:backgroundTint="@color/colorSeparator"
-                    android:padding="5dp"
-                    android:src="@android:drawable/ic_menu_add"
-                    app:layout_constraintEnd_toStartOf="@id/bClear"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:onClick='@{viewModel::addNotifications}' />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvBAddDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/notifications_bottomsheet_add" />
 
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/bClear"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:background="@drawable/button_shape"
-                    android:backgroundTint="@color/colorSeparator"
-                    android:padding="5dp"
-                    android:src="@android:drawable/ic_menu_delete"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:onClick='@{viewModel::clearNotifications}' />
-            </androidx.appcompat.widget.LinearLayoutCompat>
-        </FrameLayout>
+            <View
+                android:id="@+id/separator1"
+                style="@style/SeparatorStyle"
+                android:layout_width="match_parent" />
+
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/bClear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_shape"
+                android:backgroundTint="@color/colorSeparator"
+                android:padding="5dp"
+                android:src="@android:drawable/ic_menu_delete"
+                app:onClick='@{viewModel::clearNotifications}' />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvBClearDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/notifications_bottomsheet_clear" />
+        </androidx.constraintlayout.motion.widget.MotionLayout>
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
