removed onItemClickListener fixes warning need to fix mapFragment!

--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -15,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background='@{notificationItemViewModel.notification.dateOfRead == null ? @color/colorNotActive : @color/colorBackgroundPrimary}'
-        tools:ignore="ContentDescription">
+        tools:ignore="ContentDescription"
+        app:onClick='@{notificationItemViewModel::openNotification}'>
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivItemImage"
